# scout

./: .scout_config  Cargo.toml  news.txt  todo.md
scripts/: balance_sheet_tatasteel.py
src/: agent.rs  config.rs  display.rs  income_statement.rs  main.rs  model_select.rs  tools.rs  ui.rs  user.rs  yahoo.rs
