[package]
name = "scout"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
reqwest = { version = "0.11", features = ["json", "cookies"] }
tokio = {version = "1", features = ["full"]}
serde_json = "1"
anyhow = "1.0.102"
dotenv = "0.15.0"
yfinance-rs = "0.7.2"
strsim = "0.11.1"
csv = "1.4.0"
